database/mongodb/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: database
  labels:
    app.kubernetes.io/name: mongodb
    app.kubernetes.io/instance: mongodb
    app.kubernetes.io/part-of: database
    app.kubernetes.io/managed-by: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  selector:
    app.kubernetes.io/name: mongodb
    app.kubernetes.io/instance: mongodb
  ports:
    - name: mongodb
      port: 27017
      targetPort: 27017
      protocol: TCP
