database/mongodb/ingress-tcp.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mongodb
  namespace: database
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`leaf.lab`)
      services:
        - name: mongodb
          port: 27017
  tls:
    secretName: monster-server-cert
    options:
      name: mtls-strict
      namespace: traefik
